@@ -12,13 +12,13 @@ HOSTS:
       - master
       - client
     platform: el-6-x86_64
-    box: centos/6
+    box: elastic/oel-6-x86_64
     hypervisor: <%= hypervisor %>
   el7:
     roles:
       - client
     platform: el-7-x86_64
-    box: centos/7
+    box: elastic/oel-7-x86_64
     hypervisor: <%= hypervisor %>
 CONFIG:
   log_level: verbose
